# BOOKSTORE

./: .env.dev  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: factories.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  tests_product.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_product_serializer.py
product/viewsets/: product_viewset.py
